<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E8E3E3"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:text="Enter Job Offers"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Title"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobTitle"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Job title"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Company"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobCompany"
                    android:layout_width="253dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Company name"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Location"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobCity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="3dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="City"
                    android:inputType="textPersonName"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <EditText
                    android:id="@+id/idJobState"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="State"
                    android:inputType="textPersonName"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="AYS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobAYS"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:hint="Yearly salary"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="AYB"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobAYB"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:hint="Yearly bonus"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="LT"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobLT"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:hint="Leave time"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CSO"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobCSO"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:hint="Company shares offered"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="HBP"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobHBP"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:hint="Home Buying Program"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="WF"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idJobWF"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:hint="Wellness Fund"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idButtonSaveJobOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:onClick="handleClickSave"
                    android:text="save" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:onClick="handleClickCancel"
                    android:text="cancel" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>