...
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:onClick="handleClick"
                android:text="Edit current job" />

            <Button
                android:id="@+id/buttonEnterOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
...
